spacing issues
fixed

--- a/css/general.css
+++ b/css/general.css
@@ -22,13 +22,14 @@ body {
     background-color: mintcream;
 }
 
+
 .holder {
     padding: 0;
     margin: 4em;
     border: solid 2px darkcyan;
     border-radius: 10px;
     background-color: mediumaquamarine;
-    width: 60%;
+    max-width: 20em;
     text-align: center;
     overflow: hidden;
 }
@@ -37,7 +38,7 @@ body {
     padding: 0;
     margin: auto;
     background-color: snow;
-    width: 60%;
+    width: 20em;
     overflow: hidden;
 }
 
@@ -59,7 +60,6 @@ body {
     float: right;
     text-align: center;
     margin-right: 1.2em;
-    margin-top: 4em;
     height: 3em;
     width: 2.5em;
     background-color: honeydew;
@@ -68,6 +68,11 @@ body {
 .delete:hover {
     background-color: darkcyan;
     color: white;
+}
+
+li {
+    font-size: 1.25em;
+    margin-top: 1.25em;
 }
 
 .label {
@@ -93,7 +98,6 @@ body {
     float: right;
     text-align: center;
     margin-right: 2.3em;
-    height: 20px;
     width: 4.25em;
     padding: .24em;
     border: solid 2px darkcyan;
